language/move-lang/tests/move_check/parser/let_binding_bad_name.exp
error: 

   ┌── tests/move_check/parser/let_binding_bad_name.move:4:13 ───
   │
 4 │         let {};
   │             - Expected a variable or struct name
   │             ^ Unexpected '{'
   │

